[package]
name = "consensus-workbench"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
doctest = false
name = "lib"

[[bin]]
name = "client"
path = "src/client.rs"
test = false

[[bin]]
name = "single_node"
path = "src/single_node/node.rs"
test = false

[[bin]]
name = "primary"
path = "src/primary_backup/primary.rs"
test = false

[[bin]]
name = "backup"
path = "src/primary_backup/backup.rs"
test = false

[dependencies]
tokio = { version = "1.5.0", features = ["rt", "net", "sync", "macros", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
thiserror = "1.0.24"
bytes = "1.0.1"
log = "0.4.14"
futures = "0.3.14"
rand = { version = "0.7.3", features = ["small_rng"] }
async-trait = "0.1.50"
simple_logger = "2.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.19.0"
