[package]
name = "consensus-workbench"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
doctest = false
name = "lib"

[[bin]]
name = "client"
path = "src/client.rs"
test = false

[[bin]]
name = "single_node"
path = "src/single_node/main.rs"

[[bin]]
name = "node_lock_commit"
path = "src/lock_commit/main.rs"

[[bin]]
name = "blockchain"
path = "src/blockchain/main.rs"


[dependencies]
tokio = { version = "1.15.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
thiserror = "1.0.24"
bytes = "1.0.1"
log = "0.4.14"
clap = { version = "4.0.5", features = ["derive"] }
futures = "0.3.14"
rand = { version = "0.7.3", features = ["small_rng"] }
async-trait = "0.1.50"
simple_logger = "2.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.19.0"
anyhow = "1.0.65"
sha2 = "0.9.8"
hex = "0.4"
uuid = { version = "1.2.1", features = ["v4"] }
itertools = "0.10.5"

[dev-dependencies]
ctor = "0.1.23"
tokio-retry = "0.3.0"
