[package]
name = "single_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "node"
path = "src/node.rs"

[dependencies.network]
path = "../network"

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
bytes = "1.0.1"
log = "0.4.14"
async-trait = "0.1.50"
simple_logger = "2.3.0"
futures = "0.3.14"
